[build]CMake 使用说明

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(SRCROOT ${PROJECT_SOURCE_DIR}/3rdparty/LuaJIT/src)
 
 
 
-IF(NOT CMAKE_BCMAKE_BUILD_TYPEUILD_TYPE)
-    SET( "Release")
+IF(NOT CMAKE_BUILD_TYPE)
+    SET(CMAKE_BUILD_TYPE "Release")
 ENDIF(NOT CMAKE_BUILD_TYPE)
 
 message(${CMAKE_BUILD_TYPE})
